--- a/package.json
+++ b/package.json
@@ -1,8 +1,14 @@
 {
+  "name": "camlica-academi",
+  "version": "1.0.0",
+  "description": "Camlica Academi backend",
+  "main": "server.js",
   "scripts": {
-    "start": "servor --reload"
+    "start": "node server.js"
   },
   "dependencies": {
-    "servor": "^4.0.2"
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "multer": "^1.4.5-lts.1"
   }
 }
