--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "express": "^4.18.2",
     "cors": "^2.8.5",
     "multer": "^1.4.5-lts.1",
-    "pdf-parse": "^1.1.1"
+    "pdf-parse": "^1.1.1",
+    "fs-extra": "^11.2.0",
+    "tesseract.js": "^4.1.1"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
